--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   wear:
   wearable_rotary:
   flutter_wear_os_connectivity:
+  carousel_slider:
 
 dev_dependencies:
   flutter_test:
