--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   wear:
   wearable_rotary:
   flutter_wear_os_connectivity:
-  carousel_slider:
+  flutter_time_picker_spinner:
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
