--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_wear_os_connectivity:
   flutter_time_picker_spinner:
   multi_select_flutter: ^4.1.3
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
