--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   # change_app_package_name: ^1.1.0
   watch_connectivity: ^0.1.6
   shared_preferences:
+  intl:
+  provider:
 
 dev_dependencies:
   flutter_test:
