✨ feat: ringing alram at set time #4

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   provider:
   alarm:
   permission_handler:
+  window_manager:
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +73,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/music_cover.jpeg
+    - assets/marimba.mp3
+    - assets/Logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
