--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   window_manager:
   flutter_native_splash: ^2.4.0
   change_app_package_name: ^1.1.0
+  workout:
 
 dev_dependencies:
   flutter_test:
