--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # wear: ^1.1.0
-  square_percent_indicater: ^0.1.0
   wear:
   wearable_rotary:
-  flutter_wear_os_connectivity:
   flutter_time_picker_spinner:
   multi_select_flutter: ^4.1.3
   # change_app_package_name: ^1.1.0
@@ -52,6 +50,8 @@ dependencies:
   flutter_native_splash: ^2.4.0
   change_app_package_name: ^1.1.0
   workout:
+  heart_rate_flutter:
+
   
 
 dev_dependencies:
